# linux-scope

./: .gitignore  CMakeLists.txt  README.md
include/: BaseController.h  BaseDisplay.h  CvDisplay.h  FbDisplay.h  HUD.h  Thread.h  VideoProcessor.h  VideoProvider.h
linux-scope/: CMakeLists.txt
linux-scope/include/Camera/: V4L2Capture.h  VideoProvider.h  VideoProviderLuckfox.h
linux-scope/include/Display/: BaseDisplay.h  CvDisplay.h  DisplayManager.h  FbDisplay.h  HUD.h  VideoProcessor.h
linux-scope/include/UserInput/: BaseController.h  KeyboardController.h
linux-scope/include/Utility/: Log.h  Singleton.h  Thread.h
linux-scope/src/: main.cpp
linux-scope/src/Camera/: V4L2Capture.cpp  VideoProvider.cpp  VideoProviderLuckfox.cpp
linux-scope/src/Display/: CvDisplay.cpp  DisplayManager.cpp  FbDisplay.cpp  HUD.cpp  VideoProcessor.cpp
linux-scope/src/UserInput/: KeyboardController.cpp
linux-scope/src/Utility/: Thread.cpp
linux-scope/src/test/: test_luckfox_camera_fps.cpp  test_luckfox_camera_to_display.cpp  test_luckfox_camera_to_display_manager.cpp  test_luckfox_display.cpp  test_luckfox_v4l2_raw.cpp
luckfox/: sc3336.ko  sc3336_CMK-OT2119-PC1_30IRC-F16.json
src/: CvDisplay.cpp  FbDisplay.cpp  KeyboardController.cpp  Thread.cpp  VideoProcessor.cpp  VideoProvider.cpp  main.cpp
wiki/: luckfox.md  luckfox_dev.md  notas.md
